# devhub

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: create-license.mjs  fix-icon.mjs  generate-license-keys.mjs  verify-license.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs
src-tauri/src/commands/: collections.rs  database.rs  http.rs  mod.rs  snippets.rs  storage.rs
src/components/Layout/: Sidebar.tsx  TabBar.tsx  TitleBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  CodeEditor.tsx  Input.tsx  Modal.tsx  Select.tsx  Tooltip.tsx
src/features/api/: ApiTester.tsx  Collections.tsx  EnvironmentManager.tsx  RequestBuilder.tsx  ResponseViewer.tsx  index.ts
src/features/auth/: AuthPage.tsx  SignIn.tsx  SignUp.tsx
src/features/database/: Database.tsx
src/features/encoder/: EncoderTool.tsx
src/features/json-tools/: JsonTools.tsx
src/features/regex-tester/: RegexTester.tsx
src/features/settings/: ExportImportModal.tsx
src/features/snippets/: Snippets.tsx
src/hooks/: useKeyboardShortcuts.ts  useToast.ts
src/lib/: assertions.ts  firebase.ts  interpolate.ts
src/store/: apiStore.ts  appStore.ts  authStore.ts  envStore.ts  snippetStore.ts
src/types/: index.ts
website/: index.html
