[package]
name = "devhub"
version = "0.1.0"
description = "DevHub — All-in-one developer productivity tool"
authors = ["DevHub"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

# Suppress console window on Windows in release builds
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core — only enable the allowlisted features we actually use
tauri = { version = "1.6", features = [ "shell-open", "dialog-all", "fs-all",
  "path-all",
] }

# Serialization
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled = statically links libsqlite3, no external dep needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# Async HTTP client — rustls avoids OpenSSL dependency on Windows
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime (Tauri already pulls tokio; we re-use it for reqwest)
tokio = { version = "1", features = ["full"] }

# UUID v4 generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL-safe percent-encoding for query params
urlencoding = "2"

# Platform data-dir helper (e.g. %APPDATA% on Windows)
dirs = "5"

# MySQL client (blocking, simple API)
mysql = "25"

# MongoDB async driver
mongodb = "2"
bson     = { version = "2", features = ["chrono-0_4"] }

# Convenient single-initialisation statics
once_cell = "1"

# Ordered map — used to collect MongoDB document column names in insertion order
indexmap = "2"

# Async stream utilities required by mongodb cursor
futures = "0.3"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
